--- a/Dash2/assets/styles.css
+++ b/Dash2/assets/styles.css
@@ -5,7 +5,10 @@
 
 body {
   background-color: #f2f2f2;
-  margin: 5%;
+  margin-left: 2%;
+  margin-right: 2%;
+  margin-bottom: 0%;
+  margin-top: 0%;
 }
 
 .two.columns {
